# Flashspan

./: .gitignore  Codebase.txt  README.md  appimagebuilder.yml  index.html  package.json  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: appimage.yml  ci.yml  release.yml  test.yml
public/: demo.html
src/: App.css  App.jsx  App.tsx  index.css  index.tsx  tauri.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/proptest-regressions/core/: prop_tests.txt
src-tauri/src/: audio.rs  lib.rs  main.rs  session.rs  wasm_bridge.rs  wasm_bridge_tests.rs
src-tauri/src/core/: engine.rs  generate.rs  mod.rs  prop_tests.rs  tests.rs  types.rs  validate.rs
src/__tests__/: App.accessibility.test.tsx  App.flows.test.tsx  App.performance.test.tsx  answerValidation.test.ts  clearSessionTimers.test.ts  sessionRace.test.tsx  wasm.integration.test.ts
src/__tests__/__mocks__/: mockRuntime.ts
src/runtime/: browser.ts  index.ts  native.ts  types.ts
src/wasm/: coreBridge.ts  loader.ts
