[package]
name = "Flashspan"
version = "1.1.0"
description = "Mental Maths training simulator"
authors = ["you"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.94.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
image = { version = "0.25", default-features = false, features = ["png"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
rand = "0.10"
rodio = "0.22"
once_cell = "1"
