[package]
name = "Flashspan"
version = "2.1.0"
description = "Mental Maths training simulator"
authors = ["you"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.95.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
image = { version = "0.25", default-features = false, features = ["png"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
log = "0.4"
once_cell = "1"
rodio = "0.22"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.4", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
